--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,7 +7,7 @@
 .hero {
   position: relative;
   height: 100vh;
-  background-image: url('https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=1920');
+  background-image: url("https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=1920");
   background-size: cover;
   background-position: center;
   display: flex;
@@ -88,7 +88,7 @@
 }
 
 .service-card:hover {
-  border-color: #D4AF37;
+  border-color: #d4af37;
 }
 
 .service-icon {
@@ -115,7 +115,6 @@
   text-align: center;
   margin-top: 3rem;
 }
-
 
 /* Instagram Section */
 .instagram-section {
@@ -205,7 +204,7 @@
 }
 
 .feature-list li::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 0.6rem;
@@ -245,11 +244,11 @@
   .hero-title {
     font-size: 2rem;
   }
-  
+
   .feature-grid {
     grid-template-columns: 1fr;
   }
-  
+
   .hero {
     height: 80vh;
   }
