--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -121,6 +121,7 @@
 .instagram-section {
   padding: 8rem 0;
   background: #0a0a0a;
+  border-bottom: 1px solid #222;
 }
 
 .instagram-handle {
@@ -195,7 +196,7 @@
 
 /* Feature Section */
 .feature-section {
-  padding: 8rem 0;
+  padding: 6rem 0;
   background: #000;
 }
 
