better feature section

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -45,8 +45,8 @@
 }
 
 .nav-link.active {
-  color: #fff;
-  border-bottom: 2px solid #fff;
+  color: #D4AF37;
+  border-bottom: 2px solid #D4AF37;
 }
 
 /* Hamburger Button */
